--- a/index.html
+++ b/index.html
@@ -843,20 +843,20 @@
             <form id="formMail"  class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <label for="nombreMail"><span class="LANG" key=""></span></label>
+                  <label for="nombreMail"><span class="LANG" key="NAMEMAIL"></span></label>
                   <input id="nombreMail"type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" required>
                 </div>
                 <div  class="col-md-6 form-group mt-3 mt-md-0">
-                  <label for="emailMail"><span class="LANG" key=""></span></label>
+                  <label for="emailMail"><span class="LANG" key="emailMail"></span></label>
                 <input id="emailMail" type="email" class="form-control" name="email" id="email" placeholder="Tu correo electrónico" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label for="asuntoMail"><span class="LANG" key=""></span></label>
+                <label for="asuntoMail"><span class="LANG" key="asuntoMail"></span></label>
                 <input type="text" id="asuntoMail" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
               </div>
               <div class="form-group mt-3">
-                <label for="mensajeMail"><span class="LANG" key=""></span></label>
+                <label for="mensajeMail"><span class="LANG" key="mensajeMail"></span></label>
                 <textarea id="mensajeMail" class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
               </div>
               <div class="my-3">
