Certificate EF SET

--- a/index.html
+++ b/index.html
@@ -699,6 +699,10 @@
                     <li class="detail-il">Level B2</li>
                     <li class="detail-il" class="lang" key="FROM-TO-COUNCIL"></li>
                   </div>
+                  <div class="resume-item">EF SET certificate <a href="https://www.efset.org/cert/vquArc" target=”_blank”><i class="bi bi-person-lines-fill"></i></a>
+                    <li class="detail-il">EFSET</li>
+                    <li class="detail-il">79/100 C2 Proficient</li>
+                  </div>
                   <div class="resume-item">Duolingo <a href="https://www.duolingo.com/profile/squizzato.fabio" target=”_blank”><i class="bi bi-person-lines-fill"></i></a></div>              
               </div>
             </div>
