--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 </li>
                 <li>React<img class="imgTecnologias" src="./assets/img/icons/icons8-react-80.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary lang" key="LEARNING" style="width: 30%">En aprendizaje</div>
+                    <div class="progress-bar bg-warning lang" key="INTERMEDIO" style="width: 66%"></div>
                   </div>
                 </li>
                 <li>Vue<img class="imgTecnologias" src="./assets/img/icons/icons8-vuejs-48.png" alt="">
@@ -422,6 +422,19 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/react-logo.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4 class="lang" key="PRODE-SIMULATOR"></h4>
+                <p><img width="48px" height="48px" src="./assets/img/icons/icons8-react-80.png"/></p>
+                <div class="portfolio-links">
+                  <a href="prode-simulador.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java.png" class="img-fluid" alt="">
@@ -586,7 +599,18 @@
   
           <div class="row">
 
-              <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-blue">
+                <div class="icon">
+                  <img alt="react-logo" class="imgTecnologias" src="./assets/img/icons/icons8-react-80.png"/>
+                </div>
+                <h4 class="lang" key="LEARN-REACT"></h4>
+                <p><em>Codeacademy</em></p>
+                <p><a href="https://www.codecademy.com/learn/react-101"><i class="bi bi-link"></i></a></p>
+              </div>
+            </div>  
+            
+            <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box iconbox-blue">
                   <div class="icon">
                     <img src="./assets/img/icons/icons8-java-48.png"/>
