Agregado readme.md y proyecto fetching data

--- a/fetching-data.html
+++ b/fetching-data.html
@@ -44,17 +44,17 @@
         <div class="container">
   
               <div class="portfolio-info">
-                <h3>Juego para adivinar banderas</h3>
+                <h3>Obteniendo infomación desde un servidor</h3>
                 <ul>
-                  <li><strong> Tecnologías</strong><img width="24px" height="24px" src="./assets/img/icons/icons8-react-80.png"/><img width="24px" height="24px" src="./assets/img/icons/icons8-bootstrap-48.png"/></li>
-                  <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://flags-game-sable.vercel.app/">https://flags-game-sable.vercel.app/</a></li>
-                  <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/flags-game">https://github.com/fabio2100/flags-game</a></li>
+                  <li><strong> Tecnologías</strong><img width="24px" height="24px" src="./assets/img/icons/icons8-react-80.png"/></li>
+                  <li><strong>Url del proyecto</strong>: <a target="_blank" href="https://fetching-data-ochre.vercel.app/">https://fetching-data-ochre.vercel.app/</a></li>
+                  <li><strong>Url del repositorio</strong>: <a target="_blank" href="https://github.com/fabio2100/fetching-data">https://github.com/fabio2100/fetching-data</a></li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>Descripción</h2>
                 <p>
-                  Realizado íntegramente en <em>React</em>, es un juego donde el usuario debe adivinar el país al que corresponde la bandera que se muestra. Hace uso de <em>fetch, useEffect, useState y bootstrap</em> 
+                    Pequeño proyecto realizado en <em>react</em> que simula la carga de información desde un servidor (usando https://jsonplaceholder.typicode.com/), donde se tiene a usuarios que realizan posteos y estos posteos a su vez tienen comentarios. Se permite cargar los posteos por usuarios y los comentarios por posteo
                 </p>
               </div>
            
