--- a/index.html
+++ b/index.html
@@ -427,6 +427,19 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/react-logo.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4 class="lang" key="FETCHING-DATA"></h4>
+                <p><img width="48px" height="48px" src="./assets/img/icons/icons8-react-80.png"/></p>
+                <div class="portfolio-links">
+                  <a href="fetching-data.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/react-logo.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
                 <h4 class="lang" key="FLAGS-GAME"></h4>
                 <p><img width="48px" height="48px" src="./assets/img/icons/icons8-react-80.png"/><img width="48px" height="48px" src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
