agregado diplomatura en bbdd

--- a/index.html
+++ b/index.html
@@ -629,6 +629,17 @@
             <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box iconbox-blue">
                 <div class="icon">
+                  <img alt="react-logo" class="imgTecnologias" src="./assets/img/icons/bbdd.png"/>
+                </div>
+                <h4 class="lang" key="DIPLOMATURE-BBDD"></h4>
+                <p><em>UTN BA E LEARNING</em></p>
+                <p><a href="https://sceu.frba.utn.edu.ar/e-learning/detalle/diplomatura/1294/diplomatura-en-bases-de-datos"><i class="bi bi-link"></i></a></p>
+              </div>
+            </div>  
+
+            <div class="col-lg-4 col-md-6 col-sm-12 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box iconbox-blue">
+                <div class="icon">
                   <img alt="react-logo" class="imgTecnologias" src="./assets/img/icons/icons8-react-80.png"/>
                 </div>
                 <h4 class="lang" key="LEARN-REACT"></h4>
