--- a/index.html
+++ b/index.html
@@ -464,6 +464,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pythonmain.jfif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4 class="lang" key="SPOTIFY-RANKING"></h4>
+                <p><img width="48px" height="48px" src="./assets/img/icons/icons8-python-48.png"/></p>
+                <div class="portfolio-links">
+                  <a href="sporanking.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4 class="lang" key="ATM"></h4>
